# AoC_2024

./: .gitignore  CMakeLists.txt  README.md  enableCoreDump.sh
2Dutils/: 2Dutils.hpp  CMakeLists.txt
day_01/: CMakeLists.txt  main.cpp
day_02/: CMakeLists.txt  main.cpp
day_03/: main.cpp
day_04/: main.cpp
day_05/: main.cpp
day_06/: main.cpp
day_07/: CMakeLists.txt  main.cpp
day_07/ut/: CMakeLists.txt  Test_day_07.cpp
day_08/: CMakeLists.txt  main.cpp
day_08/ut/: CMakeLists.txt  Test.cpp
inputManager/: CMakeLists.txt  InputManager.cpp  InputManager.hpp
outputBuilder/: CMakeLists.txt  HelperDay6.cpp  HelperDay6.hpp  OutputBuilder.cpp  OutputBuilder.hpp
outputBuilder/ut/: CMakeLists.txt  TestOutputBuilder.cpp
tokenizer/: CMakeLists.txt  Tokenizer.cpp  Tokenizer.hpp
